// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/classification/Classification should render a classified badge with an inline definition 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    color="#ffeb7f"
    name="Confidential"
  />
  <Label
    text={
      <FormattedMessage
        defaultMessage="Definition"
        id="boxui.classification.definition"
      />
    }
  >
    <p
      className="bdl-Classification-definition"
    >
      fubar
    </p>
  </Label>
</article>
`;

exports[`features/classification/Classification should render a classified badge with click functionality 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    color="#ffeb7f"
    name="Confidential"
    onClick={[Function]}
    tooltipText="fubar"
  />
</article>
`;

exports[`features/classification/Classification should render a classified badge with definition in tooltip 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    color="#ffeb7f"
    name="Confidential"
    tooltipText="fubar"
  />
</article>
`;

exports[`features/classification/Classification should render a classified badge with no definition 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    color="#ffeb7f"
    name="Confidential"
  />
</article>
`;

exports[`features/classification/Classification should render a classified badge with security controls when provided and message style is inline 1`] = `
<article
  className="bdl-Classification "
>
  <ClassifiedBadge
    color="#ffeb7f"
    name="Confidential"
  />
  <Label
    text={
      <FormattedMessage
        defaultMessage="Definition"
        id="boxui.classification.definition"
      />
    }
  >
    <p
      className="bdl-Classification-definition"
    >
      fubar
    </p>
  </Label>
  <SecurityControls
    classificationName="Confidential"
    controls={
      Object {
        "sharedLink": Object {
          "accessLevel": "collabOnly",
        },
      }
    }
    controlsFormat="short"
    definition="fubar"
    itemName=""
    maxAppCount={3}
    shouldRenderLabel={true}
  />
</article>
`;

exports[`features/classification/Classification should render classification last modified information with expected action label when provided and message style is inline 1`] = `
<FormattedMessage
  defaultMessage="{modifiedActionLabel} {modifiedBy} on {modifiedAt}"
  id="boxui.classification.modifiedBy"
  values={
    Object {
      "modifiedActionLabel": <FormattedMessage
        defaultMessage="Applied by"
        id="boxui.classification.appliedByText"
      />,
      "modifiedAt": <FormattedDate
        day="numeric"
        month="long"
        value={2020-07-16T00:51:10.000Z}
        year="numeric"
      />,
      "modifiedBy": "A User",
    }
  }
/>
`;

exports[`features/classification/Classification should render classification last modified information with expected action label when provided and message style is inline 2`] = `
<FormattedMessage
  defaultMessage="{modifiedActionLabel} {modifiedBy} on {modifiedAt}"
  id="boxui.classification.modifiedBy"
  values={
    Object {
      "modifiedActionLabel": <FormattedMessage
        defaultMessage="Applied by"
        id="boxui.classification.appliedByText"
      />,
      "modifiedAt": <FormattedDate
        day="numeric"
        month="long"
        value={2020-07-16T00:51:10.000Z}
        year="numeric"
      />,
      "modifiedBy": "A User",
    }
  }
/>
`;

exports[`features/classification/Classification should render classification last modified information with expected action label when provided and message style is inline 3`] = `
<FormattedMessage
  defaultMessage="{modifiedActionLabel} {modifiedBy} on {modifiedAt}"
  id="boxui.classification.modifiedBy"
  values={
    Object {
      "modifiedActionLabel": <FormattedMessage
        defaultMessage="Imported from"
        id="boxui.classification.importedFromText"
      />,
      "modifiedAt": <FormattedDate
        day="numeric"
        month="long"
        value={2020-07-16T00:51:10.000Z}
        year="numeric"
      />,
      "modifiedBy": "A User",
    }
  }
/>
`;

exports[`features/classification/Classification should render not classified message 1`] = `
<article
  className="bdl-Classification "
>
  <span
    className="bdl-Classification-missingMessage"
  >
    <FormattedMessage
      defaultMessage="Not classified"
      id="boxui.classification.missing"
    />
  </span>
</article>
`;
